# diagvrs

./: Cargo.toml  Makefile  deps.dot
.github/workflows/: gh-pages-deploy.yml
demo/: Cargo.toml  index.css  index.html
demo/src/: components.rs  lib.rs  main.rs
demo/src/components/: input_page.rs  output_page.rs
src/: core.rs  generating.rs  lib.rs  main.rs  parsing.rs  rendering.rs
tests/: misc.rs
