[package]
name = "diagvrs"
version = "0.1.0"
authors = ["apljungquist"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"

[lib]
name = "diagvrs"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"