[package]
name = "diagv"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.7.7", features = ["csr"] }
console_log = "1.0"
log = "0.4.22"
console_error_panic_hook = "0.1.7"
diagvrs = {path = "../"}
thaw = { version = "0.4.3", features = ["csr"] }
