[package]
name = "diagv-demo"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
dot-parser = "0.3.3"
icondata_mdi = "0.0.10"
leptos = { version = "0.7.7", features = ["csr"] }
log = "0.4.26"
thaw = { version = "0.4.3", features = ["csr"] }

diagv = { path = ".." }
